# boe_ons

./: README.md  pyproject.toml  requirements.txt
analysis/: forecasting.py  forecasting_model.py  plot_monthly_vacancies.py  plot_vacancies.py
src/: data_cleaning_structuring.py  fetch_data.py  main.py
