[tool.poetry]
name = "boe-ons"
version = "0.1.0"
description = ""
authors = ["syed <mohsinnadeem631@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.5"
tqdm = "^4.67.1"
pandas = "^2.3.3"
matplotlib = "^3.10.6"
seaborn = "^0.13.2"
statsmodels = "^0.14.5"
black = "^25.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
